feat: Improve the homepage search interface and optimize the code